cleanup sp-server code