@@ -3,7 +3,7 @@ package net.minecraft.src;
 import java.util.List;
 
 public class EntityBoat extends Entity {
-	private boolean field_70279_a;
+	private final boolean field_70279_a;
 	private double speedMultiplier;
 	private int boatPosRotationIncrements;
 	private double boatX;
@@ -30,9 +30,9 @@ public class EntityBoat extends Entity {
 	}
 
 	protected void entityInit() {
-		this.dataWatcher.addObject(17, new Integer(0));
-		this.dataWatcher.addObject(18, new Integer(1));
-		this.dataWatcher.addObject(19, new Integer(0));
+		this.dataWatcher.addObject(17, Integer.valueOf(0));
+		this.dataWatcher.addObject(18, Integer.valueOf(1));
+		this.dataWatcher.addObject(19, Integer.valueOf(0));
 	}
 
 	/**
@@ -140,7 +140,7 @@ public class EntityBoat extends Entity {
 
 		for (int var4 = 0; var4 < var1; ++var4) {
 			double var5 = this.boundingBox.minY
-					+ (this.boundingBox.maxY - this.boundingBox.minY) * (double) (var4 + 0) / (double) var1 - 0.125D;
+					+ (this.boundingBox.maxY - this.boundingBox.minY) * (double) (var4) / (double) var1 - 0.125D;
 			double var7 = this.boundingBox.minY
 					+ (this.boundingBox.maxY - this.boundingBox.minY) * (double) (var4 + 1) / (double) var1 - 0.125D;
 			AxisAlignedBB var9 = AxisAlignedBB.getAABBPool().getAABB(this.boundingBox.minX, var5, this.boundingBox.minZ,
@@ -160,7 +160,7 @@ public class EntityBoat extends Entity {
 			var8 = Math.sin((double) this.rotationYaw * Math.PI / 180.0D);
 
 			for (int var10 = 0; (double) var10 < 1.0D + var23 * 60.0D; ++var10) {
-				double var11 = (double) (this.rand.nextFloat() * 2.0F - 1.0F);
+				double var11 = this.rand.nextFloat() * 2.0F - 1.0F;
 				double var13 = (double) (this.rand.nextInt(2) * 2 - 1) * 0.7D;
 				double var15;
 				double var17;
@@ -279,12 +279,12 @@ public class EntityBoat extends Entity {
 			}
 
 			this.rotationPitch = 0.0F;
-			var8 = (double) this.rotationYaw;
+			var8 = this.rotationYaw;
 			var25 = this.prevPosX - this.posX;
 			var12 = this.prevPosZ - this.posZ;
 
 			if (var25 * var25 + var12 * var12 > 0.001D) {
-				var8 = (double) ((float) (Math.atan2(var12, var25) * 180.0D / Math.PI));
+				var8 = (float) (Math.atan2(var12, var25) * 180.0D / Math.PI);
 			}
 
 			double var14 = MathHelper.wrapAngleTo180_double(var8 - (double) this.rotationYaw);
