@@ -82,7 +82,7 @@ public class EntityDragon extends EntityLiving implements IEntityMultiPart {
 
 	protected void entityInit() {
 		super.entityInit();
-		this.dataWatcher.addObject(16, new Integer(this.getMaxHealth()));
+		this.dataWatcher.addObject(16, Integer.valueOf(this.getMaxHealth()));
 	}
 
 	/**
@@ -96,8 +96,8 @@ public class EntityDragon extends EntityLiving implements IEntityMultiPart {
 		}
 
 		par2 = 1.0F - par2;
-		int var3 = this.ringBufferIndex - par1 * 1 & 63;
-		int var4 = this.ringBufferIndex - par1 * 1 - 1 & 63;
+		int var3 = this.ringBufferIndex - par1 & 63;
+		int var4 = this.ringBufferIndex - par1 - 1 & 63;
 		double[] var5 = new double[3];
 		double var6 = this.ringBuffer[var3][0];
 		double var8 = MathHelper.wrapAngleTo180_double(this.ringBuffer[var4][0] - var6);
@@ -155,7 +155,7 @@ public class EntityDragon extends EntityLiving implements IEntityMultiPart {
 
 			if (this.ringBufferIndex < 0) {
 				for (int var25 = 0; var25 < this.ringBuffer.length; ++var25) {
-					this.ringBuffer[var25][0] = (double) this.rotationYaw;
+					this.ringBuffer[var25][0] = this.rotationYaw;
 					this.ringBuffer[var25][1] = this.posY;
 				}
 			}
@@ -164,7 +164,7 @@ public class EntityDragon extends EntityLiving implements IEntityMultiPart {
 				this.ringBufferIndex = 0;
 			}
 
-			this.ringBuffer[this.ringBufferIndex][0] = (double) this.rotationYaw;
+			this.ringBuffer[this.ringBufferIndex][0] = this.rotationYaw;
 			this.ringBuffer[this.ringBufferIndex][1] = this.posY;
 			double var4;
 			double var6;
@@ -216,15 +216,15 @@ public class EntityDragon extends EntityLiving implements IEntityMultiPart {
 					this.setNewTarget();
 				}
 
-				var4 /= (double) MathHelper.sqrt_double(var26 * var26 + var6 * var6);
+				var4 /= MathHelper.sqrt_double(var26 * var26 + var6 * var6);
 				var31 = 0.6F;
 
 				if (var4 < (double) (-var31)) {
-					var4 = (double) (-var31);
+					var4 = -var31;
 				}
 
 				if (var4 > (double) var31) {
-					var4 = (double) var31;
+					var4 = var31;
 				}
 
 				this.motionY += var4 * 0.10000000149011612D;
@@ -244,8 +244,8 @@ public class EntityDragon extends EntityLiving implements IEntityMultiPart {
 						.getVecFromPool(this.targetX - this.posX, this.targetY - this.posY, this.targetZ - this.posZ)
 						.normalize();
 				Vec3 var39 = this.worldObj.getWorldVec3Pool()
-						.getVecFromPool((double) MathHelper.sin(this.rotationYaw * (float) Math.PI / 180.0F),
-								this.motionY, (double) (-MathHelper.cos(this.rotationYaw * (float) Math.PI / 180.0F)))
+						.getVecFromPool(MathHelper.sin(this.rotationYaw * (float) Math.PI / 180.0F),
+								this.motionY, -MathHelper.cos(this.rotationYaw * (float) Math.PI / 180.0F))
 						.normalize();
 				float var17 = (float) (var39.dotProduct(var15) + 0.5D) / 1.5F;
 
@@ -254,9 +254,9 @@ public class EntityDragon extends EntityLiving implements IEntityMultiPart {
 				}
 
 				this.randomYawVelocity *= 0.8F;
-				float var18 = MathHelper.sqrt_double(this.motionX * this.motionX + this.motionZ * this.motionZ) * 1.0F
+				float var18 = MathHelper.sqrt_double(this.motionX * this.motionX + this.motionZ * this.motionZ)
 						+ 1.0F;
-				double var19 = Math.sqrt(this.motionX * this.motionX + this.motionZ * this.motionZ) * 1.0D + 1.0D;
+				double var19 = Math.sqrt(this.motionX * this.motionX + this.motionZ * this.motionZ) + 1.0D;
 
 				if (var19 > 40.0D) {
 					var19 = 40.0D;
@@ -280,8 +280,8 @@ public class EntityDragon extends EntityLiving implements IEntityMultiPart {
 						.normalize();
 				float var24 = (float) (var23.dotProduct(var39) + 1.0D) / 2.0F;
 				var24 = 0.8F + 0.15F * var24;
-				this.motionX *= (double) var24;
-				this.motionZ *= (double) var24;
+				this.motionX *= var24;
+				this.motionZ *= var24;
 				this.motionY *= 0.9100000262260437D;
 			}
 
@@ -328,7 +328,7 @@ public class EntityDragon extends EntityLiving implements IEntityMultiPart {
 			float var33 = MathHelper.cos(this.rotationYaw * (float) Math.PI / 180.0F - this.randomYawVelocity * 0.01F);
 			this.dragonPartHead.onUpdate();
 			this.dragonPartHead.setLocationAndAngles(this.posX + (double) (var31 * 5.5F * var3),
-					this.posY + (var9[1] - var29[1]) * 1.0D + (double) (var27 * 5.5F),
+					this.posY + (var9[1] - var29[1]) + (double) (var27 * 5.5F),
 					this.posZ - (double) (var33 * 5.5F * var3), 0.0F, 0.0F);
 
 			for (int var30 = 0; var30 < 3; ++var30) {
@@ -348,14 +348,14 @@ public class EntityDragon extends EntityLiving implements IEntityMultiPart {
 
 				double[] var34 = this.getMovementOffsets(12 + var30 * 2, 1.0F);
 				float var35 = this.rotationYaw * (float) Math.PI / 180.0F
-						+ this.simplifyAngle(var34[0] - var29[0]) * (float) Math.PI / 180.0F * 1.0F;
+						+ this.simplifyAngle(var34[0] - var29[0]) * (float) Math.PI / 180.0F;
 				float var37 = MathHelper.sin(var35);
 				float var36 = MathHelper.cos(var35);
 				float var38 = 1.5F;
 				float var40 = (float) (var30 + 1) * 2.0F;
 				var32.onUpdate();
 				var32.setLocationAndAngles(this.posX - (double) ((var28 * var38 + var37 * var40) * var3),
-						this.posY + (var34[1] - var29[1]) * 1.0D - (double) ((var40 + var38) * var27) + 1.5D,
+						this.posY + (var34[1] - var29[1]) - (double) ((var40 + var38) * var27) + 1.5D,
 						this.posZ + (double) ((var7 * var38 + var36 * var40) * var3), 0.0F, 0.0F);
 			}
 
@@ -373,7 +373,7 @@ public class EntityDragon extends EntityLiving implements IEntityMultiPart {
 		if (this.healingEnderCrystal != null) {
 			if (this.healingEnderCrystal.isDead) {
 				if (!this.worldObj.isRemote) {
-					this.attackEntityFromPart(this.dragonPartHead, DamageSource.setExplosionSource((Explosion) null),
+					this.attackEntityFromPart(this.dragonPartHead, DamageSource.setExplosionSource(null),
 							10);
 				}
 
@@ -386,7 +386,7 @@ public class EntityDragon extends EntityLiving implements IEntityMultiPart {
 		if (this.rand.nextInt(10) == 0) {
 			float var1 = 32.0F;
 			List var2 = this.worldObj.getEntitiesWithinAABB(EntityEnderCrystal.class,
-					this.boundingBox.expand((double) var1, (double) var1, (double) var1));
+					this.boundingBox.expand(var1, var1, var1));
 			EntityEnderCrystal var3 = null;
 			double var4 = Double.MAX_VALUE;
 			Iterator var6 = var2.iterator();
@@ -453,10 +453,10 @@ public class EntityDragon extends EntityLiving implements IEntityMultiPart {
 
 			do {
 				this.targetX = 0.0D;
-				this.targetY = (double) (70.0F + this.rand.nextFloat() * 50.0F);
+				this.targetY = 70.0F + this.rand.nextFloat() * 50.0F;
 				this.targetZ = 0.0D;
-				this.targetX += (double) (this.rand.nextFloat() * 120.0F - 60.0F);
-				this.targetZ += (double) (this.rand.nextFloat() * 120.0F - 60.0F);
+				this.targetX += this.rand.nextFloat() * 120.0F - 60.0F;
+				this.targetZ += this.rand.nextFloat() * 120.0F - 60.0F;
 				double var2 = this.posX - this.targetX;
 				double var4 = this.posY - this.targetY;
 				double var6 = this.posZ - this.targetZ;
@@ -615,8 +615,8 @@ public class EntityDragon extends EntityLiving implements IEntityMultiPart {
 		for (int var5 = var3 - 1; var5 <= var3 + 32; ++var5) {
 			for (int var6 = par1 - var4; var6 <= par1 + var4; ++var6) {
 				for (int var7 = par2 - var4; var7 <= par2 + var4; ++var7) {
-					double var8 = (double) (var6 - par1);
-					double var10 = (double) (var7 - par2);
+					double var8 = var6 - par1;
+					double var10 = var7 - par2;
 					double var12 = var8 * var8 + var10 * var10;
 
 					if (var12 <= ((double) var4 - 0.5D) * ((double) var4 - 0.5D)) {
@@ -636,7 +636,7 @@ public class EntityDragon extends EntityLiving implements IEntityMultiPart {
 			}
 		}
 
-		this.worldObj.setBlock(par1, var3 + 0, par2, Block.bedrock.blockID);
+		this.worldObj.setBlock(par1, var3, par2, Block.bedrock.blockID);
 		this.worldObj.setBlock(par1, var3 + 1, par2, Block.bedrock.blockID);
 		this.worldObj.setBlock(par1, var3 + 2, par2, Block.bedrock.blockID);
 		this.worldObj.setBlock(par1 - 1, var3 + 2, par2, Block.torchWood.blockID);
