@@ -19,7 +19,7 @@ public class EntityMinecartFurnace extends EntityMinecart {
 
 	protected void entityInit() {
 		super.entityInit();
-		this.dataWatcher.addObject(16, new Byte((byte) 0));
+		this.dataWatcher.addObject(16, Byte.valueOf((byte) 0));
 	}
 
 	/**
@@ -56,7 +56,7 @@ public class EntityMinecartFurnace extends EntityMinecart {
 		double var10 = this.pushX * this.pushX + this.pushZ * this.pushZ;
 
 		if (var10 > 1.0E-4D && this.motionX * this.motionX + this.motionZ * this.motionZ > 0.001D) {
-			var10 = (double) MathHelper.sqrt_double(var10);
+			var10 = MathHelper.sqrt_double(var10);
 			this.pushX /= var10;
 			this.pushZ /= var10;
 
@@ -74,7 +74,7 @@ public class EntityMinecartFurnace extends EntityMinecart {
 		double var1 = this.pushX * this.pushX + this.pushZ * this.pushZ;
 
 		if (var1 > 1.0E-4D) {
-			var1 = (double) MathHelper.sqrt_double(var1);
+			var1 = MathHelper.sqrt_double(var1);
 			this.pushX /= var1;
 			this.pushZ /= var1;
 			double var3 = 0.05D;
@@ -102,7 +102,7 @@ public class EntityMinecartFurnace extends EntityMinecart {
 		if (var2 != null && var2.itemID == Item.coal.itemID) {
 			if (--var2.stackSize == 0) {
 				par1EntityPlayer.inventory.setInventorySlotContents(par1EntityPlayer.inventory.currentItem,
-						(ItemStack) null);
+						null);
 			}
 
 			this.fuel += 3600;
