@@ -21,11 +21,11 @@ public class EntitySlime extends EntityLiving implements IMob {
 
 	protected void entityInit() {
 		super.entityInit();
-		this.dataWatcher.addObject(16, new Byte((byte) 1));
+		this.dataWatcher.addObject(16, Byte.valueOf((byte) 1));
 	}
 
 	protected void setSlimeSize(int par1) {
-		this.dataWatcher.updateObject(16, new Byte((byte) par1));
+		this.dataWatcher.updateObject(16, Byte.valueOf((byte) par1));
 		this.setSize(0.6F * (float) par1, 0.6F * (float) par1);
 		this.setPosition(this.posX, this.posY, this.posZ);
 		this.setEntityHealth(this.getMaxHealth());
@@ -142,7 +142,7 @@ public class EntitySlime extends EntityLiving implements IMob {
 			}
 
 			this.moveStrafing = 1.0F - this.rand.nextFloat() * 2.0F;
-			this.moveForward = (float) (1 * this.getSlimeSize());
+			this.moveForward = (float) (this.getSlimeSize());
 		} else {
 			this.isJumping = false;
 
