@@ -67,9 +67,9 @@ public class EntityWolf extends EntityTameable {
 
 	protected void entityInit() {
 		super.entityInit();
-		this.dataWatcher.addObject(18, new Integer(this.getHealth()));
-		this.dataWatcher.addObject(19, new Byte((byte) 0));
-		this.dataWatcher.addObject(20, new Byte((byte) BlockCloth.getBlockFromDye(1)));
+		this.dataWatcher.addObject(18, Integer.valueOf(this.getHealth()));
+		this.dataWatcher.addObject(19, Byte.valueOf((byte) 0));
+		this.dataWatcher.addObject(20, Byte.valueOf((byte) BlockCloth.getBlockFromDye(1)));
 	}
 
 	/**
@@ -209,7 +209,7 @@ public class EntityWolf extends EntityTameable {
 				for (int var3 = 0; var3 < var2; ++var3) {
 					float var4 = (this.rand.nextFloat() * 2.0F - 1.0F) * this.width * 0.5F;
 					float var5 = (this.rand.nextFloat() * 2.0F - 1.0F) * this.width * 0.5F;
-					this.worldObj.spawnParticle("splash", this.posX + (double) var4, (double) (var1 + 0.8F),
+					this.worldObj.spawnParticle("splash", this.posX + (double) var4, var1 + 0.8F,
 							this.posZ + (double) var5, this.motionX, this.motionY, this.motionZ);
 				}
 			}
@@ -272,7 +272,7 @@ public class EntityWolf extends EntityTameable {
 
 						if (var2.stackSize <= 0) {
 							par1EntityPlayer.inventory.setInventorySlotContents(par1EntityPlayer.inventory.currentItem,
-									(ItemStack) null);
+									null);
 						}
 
 						return true;
@@ -285,7 +285,7 @@ public class EntityWolf extends EntityTameable {
 
 						if (!par1EntityPlayer.capabilities.isCreativeMode && --var2.stackSize <= 0) {
 							par1EntityPlayer.inventory.setInventorySlotContents(par1EntityPlayer.inventory.currentItem,
-									(ItemStack) null);
+									null);
 						}
 
 						return true;
@@ -297,7 +297,7 @@ public class EntityWolf extends EntityTameable {
 					&& !this.isBreedingItem(var2)) {
 				this.aiSit.setSitting(!this.isSitting());
 				this.isJumping = false;
-				this.setPathToEntity((PathEntity) null);
+				this.setPathToEntity(null);
 			}
 		} else if (var2 != null && var2.itemID == Item.bone.itemID && !this.isAngry()) {
 			if (!par1EntityPlayer.capabilities.isCreativeMode) {
@@ -306,14 +306,14 @@ public class EntityWolf extends EntityTameable {
 
 			if (var2.stackSize <= 0) {
 				par1EntityPlayer.inventory.setInventorySlotContents(par1EntityPlayer.inventory.currentItem,
-						(ItemStack) null);
+						null);
 			}
 
 			if (!this.worldObj.isRemote) {
 				if (this.rand.nextInt(3) == 0) {
 					this.setTamed(true);
-					this.setPathToEntity((PathEntity) null);
-					this.setAttackTarget((EntityLiving) null);
+					this.setPathToEntity(null);
+					this.setAttackTarget(null);
 					this.aiSit.setSitting(true);
 					this.setEntityHealth(20);
 					this.setOwner(par1EntityPlayer.username);
@@ -336,9 +336,7 @@ public class EntityWolf extends EntityTameable {
 	 * (wheat, carrots or seeds depending on the animal type)
 	 */
 	public boolean isBreedingItem(ItemStack par1ItemStack) {
-		return par1ItemStack == null ? false
-				: (!(Item.itemsList[par1ItemStack.itemID] instanceof ItemFood) ? false
-						: ((ItemFood) Item.itemsList[par1ItemStack.itemID]).isWolfsFavoriteMeat());
+		return par1ItemStack != null && (Item.itemsList[par1ItemStack.itemID] instanceof ItemFood && ((ItemFood) Item.itemsList[par1ItemStack.itemID]).isWolfsFavoriteMeat());
 	}
 
 	/**
@@ -420,7 +418,7 @@ public class EntityWolf extends EntityTameable {
 			return false;
 		} else {
 			EntityWolf var2 = (EntityWolf) par1EntityAnimal;
-			return !var2.isTamed() ? false : (var2.isSitting() ? false : this.isInLove() && var2.isInLove());
+			return var2.isTamed() && (!var2.isSitting() && this.isInLove() && var2.isInLove());
 		}
 	}
 
